Fix colour contrast issue

--- a/src/stylesheets/settings/_settings-colours.scss
+++ b/src/stylesheets/settings/_settings-colours.scss
@@ -76,7 +76,7 @@ $colour-base-green: #4caf50;
 $colour-base-orange: #f5b805;
 
 /// The base colour for pink
-$colour-base-pink: #d53880;
+$colour-base-pink: #d5367f;
 
 /// The base colour for purple
 $colour-base-purple: #82176f;
